--- a/multivariate_timeseries/Forecast-Assignment-Adi.ipynb
+++ b/multivariate_timeseries/Forecast-Assignment-Adi.ipynb
@@ -76,7 +76,7 @@
     "1. Remove unwanted column(s)\n",
     "2. Filter for desired date range. Exclude Nov 1, 2012 as kwh values are null\n",
     "3. Sort dataset by datetime index\n",
-    "4. Convert dataset in datafram with datetime as index\n",
+    "4. Convert dataset in dataframe with datetime as index\n",
     "5. Rename columns for ease of access\n",
     "6. Manually add first missing kwh value same as following value"
    ]
@@ -111,7 +111,7 @@
     "### 2. Analyze the data\n",
     "\n",
     "##### Daylight savings\n",
-    "There are 4 additional repeat preiods with missing values for daylight savings time change in Nov 2013. Drop those null values. Also, there are missing timestamps when the clock is adjusted earlier in March 2013 from 1 am to 3 am i.e 4 missing 15 minute periods.\n",
+    "There are 4 additional repeat periods with missing values for daylight savings time change in Nov 2013. Drop those null values. Also, there are missing timestamps when the clock is adjusted earlier in March 2013 from 1 am to 3 am i.e 4 missing 15 minute periods.\n",
     "\n",
     "##### Temperature values\n",
     "Temperature is captured every 1 hour as compared to kwh which is 15 minute duration. Fill in temperature values as linear line between two capture point. The idea is temperature will not fluctuate every 15 minutes and can be considered to change gradually within one hour. "
@@ -148,7 +148,7 @@
     "\n",
     "1. Total number of days in dataframe is 395 (index difference + 1)\n",
     "2. Missing periods for values in March (daylight savings) is 4\n",
-    "3. Tota avilable periods is 39716\n",
+    "3. Total available periods is 39716\n",
     "\n",
     "\n",
     "Instances are captured every 15 minutes, this gives 96 periods in a day i.e. 4 periods per hour for 24 hours"
@@ -216,7 +216,7 @@
     "1. Check for missing values - none\n",
     "2. Check for outliers\n",
     "\n",
-    "Plot shows outlier kwh values around Nov 17, 2013. Further research shows kwh value dropped starting starting Nov 16th all the to 0 on Nov 17th. This could be either due error logs, system failure or ad-hoc facility shutdown. This date is not a national holiday. \n",
+    "Plot shows outliers kwh values around Nov 17, 2013. Further research shows kwh value dropped starting starting Nov 16th all the to 0 on Nov 17th. This could be either due error logs, system failure or ad-hoc facility shutdown. This date is not a national holiday. \n",
     "\n",
     "It will be a good idea to fix this by making values equal to last week as outliers can reduce the model accuracy if not sure of possible reasons."
    ]
@@ -481,7 +481,7 @@
     "\n",
     "3. Seasonality \n",
     "\n",
-    "    Looking at the full plot above, there is also a slight upward tren in kwh which signifies increased usage over the year. This could be due to more head count at a work location or expanding business operations. Since we have data only for about a year, it is a good idea to ignore seasonality for the scope of this assignment.\n",
+    "    Looking at the full plot above, there is also a slight upward trend in kwh which signifies increased usage over the year. This could be due to more head count at a work location or expanding business operations. Since we have data only for about a year, it is a good idea to ignore seasonality for the scope of this assignment.\n",
     "\n",
     "    Also, the mean temperature shows trend as the change in mean temperature over the year. Again, I will ignore this for now to keep the scope limited to single trend for both kwh and temp."
    ]
@@ -532,7 +532,7 @@
     "\n",
     "*Thanksgiving week*\n",
     "\n",
-    "Above plot shows outlier pattern for the last week of dataframe i.e. week of Nov 25, 2013. Further research confirms this is the Thankdgiving week. It is a good idea to drop the last week since it will not be a good candidate for test set. We are not capturing yearly patterns or holiday patterns in this analysis as data is only one year long.\n"
+    "Above plot shows outliers pattern for the last week of dataframe i.e. week of Nov 25, 2013. Further research confirms this is the Thanksgiving week. It is a good idea to drop the last week since it will not be a good candidate for test set. We are not capturing yearly patterns or holiday patterns in this analysis as data is only one year long.\n"
    ]
   },
   {
@@ -592,7 +592,7 @@
     "    ACF shows are strong auto-correlation after every 96 lags i.e. one day. This value is highest around ~700 lags which is 7X96 or one week - **strong weekly pattern**\n",
     "\n",
     "\n",
-    "1. **temp**\n",
+    "2. **temp**\n",
     "    \n",
     "    Series plot show a pattern with 1 peak followed by 1 trough. It also shows a yearly trend where mean value is higher during summer months, but since we have data only for one year I will consider only daily pattern for the scope of this assignment.\n",
     "    \n",
@@ -721,11 +721,11 @@
    "source": [
     "##### Transformation\n",
     "\n",
-    "Now that we have identified the patterns in both series next step is to make them stattionary for modeling.\n",
+    "Now that we have identified the patterns in both series next step is to make them stationary for modeling.\n",
     "\n",
     "**log differences** - find the difference in log of current value and lagged value. This way transformed series will capture the relative change between two values which should be constant. Hence producing a stationary series.\n",
     "\n",
-    "Once the series is transofmred, drop null values those are in the initial rows before lagged instances kick in.\n"
+    "Once the series is transformed, drop null values those are in the initial rows before lagged instances kick in.\n"
    ]
   },
   {
@@ -844,7 +844,7 @@
    "source": [
     "### 4. VAR model\n",
     "\n",
-    "Use VAR model to multivariate time series forecasting. It is an extenstion of univariate autoregressive model and fairly easy to implement for the accruacy as compared to other complex algorithms.\n",
+    "Use VAR model to multivariate time series forecasting. It is an extension of univariate autoregressive model and fairly easy to implement for the accuracy as compared to other complex algorithms.\n",
     "\n",
     "1. Prepare training set - reduce transformed series by one week\n",
     "2. Test set will be last week in series\n",
@@ -997,7 +997,7 @@
     "\n",
     "##### De-transformation\n",
     "\n",
-    "Predicted and forecasted values for training and test set respectively will need to be de transformed from their log values to original values.\n",
+    "Predicted and forecast values for training and test set respectively will need to be de-transformed from their log values to original values.\n",
     "\n",
     "##### Plots\n",
     "\n",
@@ -1150,11 +1150,11 @@
     "\n",
     "**In sample error** - this is calculated by comparing original kwh values with predicted values for the week of Nov 11, 2013\n",
     "\n",
-    "Predicted values are obtained from same data used for training the model, hence in sample. In sample error (also called resubstitution error) is opitmistic because model is trained to the idosyncracies (noise) of dataset.\n",
+    "Predicted values are obtained from same data used for training the model, hence in sample. In sample error (also called re-substitution error) is optimistic because model is trained to the idiosyncrasy (noise) of dataset.\n",
     "\n",
-    "**Out of sample error** - is calculated by comparing original kwh values with forecasted values for the week of Nov 18, 2013\n",
+    "**Out of sample error** - is calculated by comparing original kwh values with forecast values for the week of Nov 18, 2013\n",
     "\n",
-    "Forecasted values were obtained without using any original test data. Therefore, it is out of sample. Out of sample error (also called generlization error) is more than in sample because model will work with new noise pattern."
+    "Forecast values were obtained without using any original test data. Therefore, it is out of sample. Out of sample error (also called generalization error) is more than in sample because model will work with new noise pattern."
    ]
   },
   {
